--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -304,56 +304,86 @@
                     new Question('3-11-2', 'single', 1, 6),
 
                     //  151-200
-                    new Question('3-12', 'multiSelect', ['1', '123']),
-                    new Question('3-13', 'multiSelect', ['never', 'never']),
-                    new Question('3-14', 'multiSelect', ['N', 'N', 'Y']),
+                    new Question('3-12-1', 'single', 1),
+                    new Question('3-12-2', 'single', 4),
+                    new Question('3-13-1', 'single', 3, 3),
+                    new Question('3-13-2', 'single', 3, 3),
+                    new Question('3-14-1', 'single', 'N', 2),
+                    new Question('3-14-2', 'single', 'N', 2),
+                    new Question('3-14-3', 'single', 'Y', 2),
                     new Question('3-15', 'single', 'B'),
                     new Question('3-16', 'multiSelect', ['A', 'C']),
-                    new Question('3-17', 'multiSelect', ['Install the azure file sync agent on Server1', 'register server1', 'add a server endpoint']),
-                    new Question('3-18', 'multiSelect', ['ZRS', 'v2']),
+                    new Question('3-17', 'orderSelect', [1, 4, 5], 6),
+                    new Question('3-18-1', 'single', 4),
+                    new Question('3-18-2', 'single', 3, 3),
                     new Question('3-19', 'multiSelect', ['B', 'E']),
                     new Question('3-20', 'single', 'D'),
-                    new Question('3-21', 'multiSelect', ['vm1 only', 'share only']),
+                    new Question('3-21-1', 'single', 1, 5),
+                    new Question('3-21-2', 'single', 2, 5),
                     new Question('3-22', 'single', 'C'),
-                    new Question('3-23', 'multiSelect', ['3', 'access tier']),
+                    new Question('3-23-1', 'single', 3),
+                    new Question('3-23-2', 'single', 1),
                     new Question('3-24', 'single', 'B'),
-                    new Question('3-25', 'multiSelect', ['AD and SAS only', 'SAS only']),
+                    new Question('3-25-1', 'single', 4, 5),
+                    new Question('3-25-2', 'single', 3, 5),
                     new Question('3-26', 'single', 'A'),
                     new Question('3-27', 'single', 'D'),
-                    new Question('3-28', 'single', 'B'),
-                    new Question('3-29', 'multiSelect', ['create storage sync service', 'create a sync group']),
-                    new Question('3-30', 'multiSelect', ['N', 'Y', 'N']),
-                    new Question('3-31', 'multiSelect', ['3', '123']),
-                    new Question('3-32', 'multiSelect', ['104', '101+103']),
-                    new Question('3-33', 'multiSelect', ['will have no access', 'will have no access', '09/10']),
+                    new Question('3-28 (duplicate)', 'single', 'B'),
+                    new Question('3-29-1', 'single', 'A'),
+                    new Question('3-29-2', 'single', 'C'),
+                    new Question('3-30-1', 'multiSelect', 'N', 2),
+                    new Question('3-30-2', 'multiSelect', 'Y', 2),
+                    new Question('3-30-3', 'multiSelect', 'N', 2),
+                    new Question('3-31-1', 'single', 3),
+                    new Question('3-31-2', 'single', 4),
+                    new Question('3-32-1', 'single', 2, 5),
+                    new Question('3-32-2', 'single', 2, 5),
+                    new Question('3-33-1', 'single', 2),
+                    new Question('3-33-2', 'single', 2),
                     new Question('3-34', 'single', 'A'),
                     new Question('3-35', 'single', 'C'),
                     new Question('3-36', 'single', 'D'),
                     new Question('3-37', 'single', 'C'),
                     new Question('3-38', 'single', 'A'),
-                    new Question('3-39', 'multiSelect', ['Y', 'Y', 'N']),
+                    new Question('3-39-1', 'single', 'Y'),
+                    new Question('3-39-2', 'single', 'Y'),
+                    new Question('3-39-3', 'single', 'N'),
                     new Question('3-40', 'single', 'B'),
                     new Question('3-41', 'single', 'B'),
-                    new Question('3-42', 'multiSelect', ['N', 'Y', 'Y']),
+                    new Question('3-42-1', 'single', 'N'),
+                    new Question('3-42-2', 'single', 'Y'),
+                    new Question('3-42-3', 'single', 'Y'),
                     new Question('3-43', 'multiSelect', ['B', 'C']),
-                    new Question('3-44', 'multiSelect', ['v2 or blob only', 'container']),
+                    new Question('3-44-1', 'single', 3),
+                    new Question('3-44-2', 'single', 1),
                     new Question('3-45', 'single', 'C'),
                     new Question('3-46', 'single', 'A'),
-                    new Question('3-47', 'multiSelect', ['SAS', 'SAS']),
+                    new Question('3-47-1', 'single', 4),
+                    new Question('3-47-2', 'single', 4),
                     new Question('3-48', 'single', 'D'),
-                    new Question('3-49', 'multiSelect', ['N', 'N', 'N']),
-                    new Question('3-50', 'multiSelect', ['N', 'N', 'Y']),
-                    new Question('3-51', 'single', 'C'),
-                    new Question('3-52', 'multiSelect', ['tierToArchive', 'prefixMatch']),
-                    new Question('3-53', 'multiSelect', ['Create', 'Set ZR', 'For VM1']),
+                    new Question('3-49-1', 'single', 'N', 2),
+                    new Question('3-49-2', 'single', 'N', 2),
+                    new Question('3-49-3', 'single', 'N', 2),
+                    new Question('3-50-1', 'single', 'N', 2),
+                    new Question('3-50-2', 'single', 'N', 2),
+                    new Question('3-50-3', 'single', 'Y', 2),
+                    new Question('3-51 (duplicate)', 'single', 'C'),
+                    new Question('3-52-1', 'single', 'B', 3),
+                    new Question('3-52-2', 'single', 'C', 3),
+                    new Question('3-53', 'orderSelect', [5, 2, 3], 5),
                     new Question('3-54', 'single', 'B'),
                     new Question('3-55', 'single', 'D'),
-                    new Question('3-56', 'single', 'E'),
-                    new Question('3-57', 'multiSelect', ['folder1 and container 1', 'table 1 only']),
-                    new Question('3-58', 'multiSelect', ['3', '1']),
-                    new Question('3-59', 'multiSelect', ['3', '1']),
+                    new Question('3-56', 'multiSelect', [3, 17], 20),
+                    new Question('3-57', 'single', '3', 5),
+                    new Question('3-58-1', 'single', 1, 5),
+                    new Question('3-58-2', 'single', 1, 5),
+                    new Question('3-59-1', 'single', 3, 5),
+                    new Question('3-59-2', 'single', 2, 5),
                     new Question('3-60', 'single', 'A'),
                     new Question('3-61', 'single', 'D'),
+
+                    // 201-250
+
                     new Question('3-62', 'multiple', ['1', '2', '3']),
                     new Question('3-63', 'single', 'C'),
                     new Question('3-64', 'single', 'B'),
