--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -454,55 +454,75 @@
                     new Question('4-20', 'single', 'B', 2),
                     new Question('4-21', 'single', 'A', 2),
                     new Question('4-22', 'single', 'B', 2),
-                    new Question('4-23', 'multiSelect', ['Y', 'N', 'N']),
-                    new Question('4-24', 'multiSelect', ['2', '7']),
+
+                    // 251-300
+                    new Question('4-23-1', 'single', 'Y', 2),
+                    new Question('4-23-2', 'single', 'N', 2),
+                    new Question('4-23-3', 'single', 'N', 2),
+                    new Question('4-24-1', 'single', 'A'),
+                    new Question('4-24-2', 'single', 'B'),
                     new Question('4-25', 'single', 'A'),
                     new Question('4-26', 'single', 'B'),
-                    new Question('4-27', 'multiSelect', ['Can connect to container from any device', 'The container will restart automatically']),
+                    new Question('4-27-1', 'single', 1, 3),
+                    new Question('4-27-2', 'single', 2, 3),
                     new Question('4-28', 'single', 'C'),
-                    new Question('4-29', 'single', 'AD'),
-                    new Question('4-30', 'multiSelect', ['D', 'E', 'F']),
+                    new Question('4-29', 'single', 'AD', 5),
+                    new Question('4-30', 'multiSelect', ['D', 'E', 'F'], 6),
                     new Question('4-31', 'single', 'D'),
                     new Question('4-32', 'single', 'B'),
-                    new Question('4-33', 'multiSelect', ['VM1 and VM2 to run', 'One email notification']),
+                    new Question('4-33-1', 'single', 2, 3),
+                    new Question('4-33-2', 'single', 2),
                     new Question('4-34', 'single', 'B'),
                     new Question('4-35', 'single', 'B'),
                     new Question('4-36', 'single', 'C'),
-                    new Question('4-37', 'multiSelect', ['N', 'Y', 'Y']),
-                    new Question('4-38', 'multiSelect', ['1-1', '2-2+3-3']),
-                    new Question('4-39', 'multiSelect', ['60', '12']),
+                    new Question('4-37-1', 'single', 'N', 2),
+                    new Question('4-37-2', 'single', 'Y', 2),
+                    new Question('4-37-3', 'single', 'Y', 2),
+                    new Question('4-38-3', 'single', 'a', 3),
+                    new Question('4-38-2', 'single', 'c'),
+                    new Question('4-39-1', 'single', 5, 5),
+                    new Question('4-39-2', 'single', 4, 5),
                     new Question('4-40', 'single', 'D'),
                     new Question('4-41', 'multiSelect', ['B', 'D']),
                     new Question('4-42', 'single', 'A'),
                     new Question('4-43', 'single', 'A'),
-                    new Question('4-44', 'single', 'B'),
-                    new Question('4-45', 'single', 'B'),
-                    new Question('4-46', 'single', 'A'),
+                    new Question('4-44', 'single', 'B', 2),
+                    new Question('4-45', 'single', 'B', 2),
+                    new Question('4-46', 'single', 'A', 2),
                     new Question('4-47', 'single', 'B'),
-                    new Question('4-48', 'single', 'web VM1, can web server and DNS'),
+                    new Question('4-48-1', 'single', 2),
+                    new Question('4-48-2', 'single', 3),
                     new Question('4-49', 'single', 'C'),
                     new Question('4-50', 'single', 'D'),
-                    new Question('4-51', 'single', 'B'),
+                    new Question('4-51', 'single', 'B', 5),
                     new Question('4-52', 'single', 'B'),
-                    new Question('4-53', 'multiSelect', ['10.244', '10.0.0.0/16']),
-                    new Question('4-54', 'multiSelect', ['2', '4']),
+                    new Question('4-53-1', 'single', 1, 3),
+                    new Question('4-53-2', 'single', 2, 3),
+                    new Question('4-54-1', 'single', 2, 5),
+                    new Question('4-54-2', 'single', 4, 5),
                     new Question('4-55', 'single', 'C'),
-                    new Question('4-56', 'single', 'C'),
-                    new Question('4-57', 'multiSelect', ['4', '1']),
+                    new Question('4-56', 'single', 'C', 5),
+                    new Question('4-57-1', 'single', 4),
+                    new Question('4-57-2', 'single', 2),
                     new Question('4-58', 'single', 'B'),
                     new Question('4-59', 'single', 'B'),
-                    new Question('4-60', 'single', 'Any, VM1 or a new'),
+                    new Question('4-60-1', 'single', 5, 5),
+                    new Question('4-60-2', 'single', 2, 5),
                     new Question('4-61', 'single', 'B'),
                     new Question('4-62', 'single', 'B'),
-                    new Question('4-63', 'multiSelect', ['3', '20']),
+                    new Question('4-63-1', 'single', 4, 5),
+                    new Question('4-63-2', 'single', 2, 5),
                     new Question('4-64', 'single', 'A'),
-                    new Question('4-65', 'multiSelect', ['3', '1']),
+                    new Question('4-65-1', 'single', 2),
+                    new Question('4-65-2', 'single', 1),
                     new Question('4-66', 'single', 'A'),
                     new Question('4-67', 'single', 'B'),
-                    new Question('4-68', 'fill-in', 'New-AzResourceGroupDeployment, ResourceGroupName RG'),
-                    new Question('4-69', 'single', 'B'),
-                    new Question('4-70', 'single', 'B'),
+                    new Question('4-68-1', 'single', 'D'),
+                    new Question('4-68-2', 'single', 'B'),
+                    new Question('4-69', 'single', 'B', 2),
+                    new Question('4-70', 'single', 'B', 2),
                     new Question('4-71', 'single', 'A'),
+                    new Question('4-72', 'single', 'B'),
                     new Question('4-73', 'multiSelect', ['copy', 'copyIndex']),
                     new Question('4-74', 'single', 'A'),
                     new Question('4-75', 'single', 'B'),
