--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -117,7 +117,7 @@
                     new Question('1-20', 'multiSelect', [1, 4], 6),
                     new Question('1-21', 'single', 'A'),
                     new Question('1-22', 'single', 'B'),
-                    new Question('1-23', 'multiSelect', [1,3,5], 6),
+                    new Question('1-23', 'multiSelect', [1, 3, 5], 6),
                     new Question('1-24', 'single', 'B', 2),
                     new Question('1-25', 'single', 'B', 2),
                     new Question('1-26', 'single', 'A', 2),
@@ -425,9 +425,9 @@
                     new Question('3-87-1', 'single', 2, 3),
                     new Question('3-87-2', 'single', 2, 3),
                     new Question('3-88', 'multiSelect', [5, 6, 7], 19),
-                    new Question('3-89-1', 'single', 'N' , 2),
-                    new Question('3-89-2', 'single', 'Y' , 2),
-                    new Question('3-89-3', 'single', 'N' , 2),
+                    new Question('3-89-1', 'single', 'N', 2),
+                    new Question('3-89-2', 'single', 'Y', 2),
+                    new Question('3-89-3', 'single', 'N', 2),
                     new Question('4-1', 'single', 'B', 2),
                     new Question('4-2', 'single', 'A'),
                     new Question('4-3', 'single', 'B', 2),
@@ -523,106 +523,158 @@
                     new Question('4-70', 'single', 'B', 2),
                     new Question('4-71', 'single', 'A'),
                     new Question('4-72', 'single', 'B'),
-                    new Question('4-73', 'multiSelect', ['copy', 'copyIndex']),
-                    new Question('4-74', 'single', 'A'),
-                    new Question('4-75', 'single', 'B'),
-                    new Question('4-76', 'single', 'A'),
+
+                    // 301-350
+
+                    new Question('4-73-1', 'single', 1, 3),
+                    new Question('4-73-2', 'single', 2, 3),
+                    new Question('4-74', 'single', 'A', 2),
+                    new Question('4-75', 'single', 'B', 2),
+                    new Question('4-76', 'single', 'A', 2),
                     new Question('4-77', 'single', 'D'),
-                    new Question('4-78', 'multiSelect', ['An Azure Storage account', 'A backup filter file']),
+                    new Question('4-78-1', 'single', 1),
+                    new Question('4-78-2', 'single', 1),
                     new Question('4-79', 'single', 'C'),
-                    new Question('4-80', 'multiSelect', ['Microsoft Compute/ virtualMachines/extensions', 'ProtectedSettings']),
-                    new Question('4-82', 'multiSelect', ['modify the Network configuration setting', 'AKS managed Azure Active Directory']),
-                    new Question('4-83', 'multiSelect', ['update', 'max-surge 2']),
-                    new Question('4-84', 'multiSelect', ['Y', 'N', 'Y']),
-                    new Question('4-85', 'single', 'A'),
-                    new Question('4-86', 'multiSelect', ['resourceGroupName', 'Complete']),
-                    new Question('4-87', 'multiSelect', ['2', '5']),
+                    new Question('4-80-1', 'single', 3, 3),
+                    new Question('4-80-2', 'single', 1, 3),
+                    new Question('4-82-1', 'single', 4),
+                    new Question('4-82-2', 'single', 1),
+                    new Question('4-83-1', 'single', 4),
+                    new Question('4-83-2', 'single', 3),
+                    new Question('4-84-1', 'single', 'Y', 2),
+                    new Question('4-84-2', 'single', 'N', 2),
+                    new Question('4-84-3', 'single', 'Y', 2),
+                    new Question('4-85 (duplicate)', 'single', 'A'),
+                    new Question('4-86-1', 'single', 3),
+                    new Question('4-86-2', 'single', 2, 3),
+                    new Question('4-87-1', 'single', 2, 5),
+                    new Question('4-87-2', 'single', 2),
                     new Question('4-88', 'single', 'D'),
-                    new Question('4-89', 'single', 'A'),
+                    new Question('4-89 (duplicate)', 'single', 'A'),
                     new Question('4-90', 'single', 'D'),
-                    new Question('4-91', 'multiSelect', ['resourceId', 'imageReference']),
-                    new Question('4-92', 'multiSelect', ['Standard', 'TXT']),
-                    new Question('4-93', 'multiSelect', ['Y', 'Y', 'Y']),
-                    new Question('4-94', 'single', 'B'),
-                    new Question('4-95', 'multiSelect', ['Y', 'N', 'N']),
+                    new Question('4-91-1', 'single', 2, 3),
+                    new Question('4-91-2', 'single', 3),
+                    new Question('4-92-1', 'single', 4),
+                    new Question('4-92-2', 'single', 4),
+                    new Question('4-93-1', 'single', 'Y', 2),
+                    new Question('4-93-2', 'singlet', 'Y', 2),
+                    new Question('4-93-3', 'single', 'Y', 2),
+                    new Question('4-94 (duplicate) ', 'single', 'B'),
+                    new Question('4-95-1', 'single', 'Y', 2),
+                    new Question('4-95-2', 'single', 'N', 2),
+                    new Question('4-95-3', 'single', 'N', 2),
                     new Question('4-96', 'single', 'D'),
-                    new Question('4-97', 'multiSelect', ['Azure Container Instances and App Services only', 'Azure Container Instances, Azure Container Apps, App Services']),
+                    new Question('4-97-1', 'single', 3, 5),
+                    new Question('4-97-2', 'single', 5, 5),
                     new Question('4-98', 'single', 'A'),
                     new Question('4-99', 'single', 'B'),
                     new Question('4-100', 'single', 'A'),
                     new Question('4-101', 'single', 'D'),
-                    new Question('4-102', 'multiSelect', ['Y', 'N', 'Y']),
+                    new Question('4-102-1', 'single', 'Y', 2),
+                    new Question('4-102-2', 'single', 'N', 2),
+                    new Question('4-102-3', 'single', 'Y', 2),
                     new Question('4-103', 'single', 'C'),
-                    new Question('5-1', 'multiSelect', ['Internal Load Balancer', 'An application gateway that uses the WAF tier']),
+                    new Question('5-1-1', 'single', 3, 5),
+                    new Question('5-1-2', 'single', 2, 5),
                     new Question('5-2', 'single', 'B'),
-                    new Question('5-3', 'multiSelect', ['5', '1']),
+                    new Question('5-3-1', 'single', 1),
+                    new Question('5-3-2', 'single', 1),
                     new Question('5-4', 'single', 'A'),
-                    new Question('5-5', 'multiSelect', ['Private only', 'Private only']),
-                    new Question('5-6', 'multiSelect', ['Workspace', 'NSG1']),
+                    new Question('5-5-1', 'single', 2),
+                    new Question('5-5-2', 'single', 2),
+                    new Question('5-6-1', 'single', 2, 3),
+                    new Question('5-6-2', 'single', 2, 3),
                     new Question('5-7', 'single', 'C'),
-                    new Question('5-8', 'multiSelect', ['B', 'D', 'E']),
+                    new Question('5-8', 'multiSelect', ['B', 'D', 'E'], 5),
                     new Question('5-9', 'single', 'A'),
-                    new Question('5-10', 'multiSelect', ['Y', 'Y', 'N']),
+                    new Question('5-10-1', 'multiSelect', 'Y', 2),
+                    new Question('5-10-2', 'multiSelect', 'Y', 2),
+                    new Question('5-10-3', 'multiSelect', 'N', 2),
                     new Question('5-11', 'single', 'D'),
-                    new Question('5-12', 'multiSelect', ['Remove peering between VNet1 and VNet2', 'Add', 'Recreate']),
-                    new Question('5-13', 'multiSelect', ['Y', 'Y', 'N']),
+                    new Question('5-12', 'orderSelect', [7, 2, 4], 7),
+                    new Question('5-13-1', 'single', 'Y', 2),
+                    new Question('5-13-2', 'single', 'Y', 2),
+                    new Question('5-13-3', 'single', 'N', 2),
                     new Question('5-14', 'single', 'C'),
                     new Question('5-15', 'single', 'B'),
                     new Question('5-16', 'single', 'D'),
                     new Question('5-17', 'single', 'A'),
                     new Question('5-18', 'single', 'B'),
                     new Question('5-19', 'single', 'A'),
-                    new Question('5-20', 'multiSelect', ['Add an address space', 'Add a subnet']),
+                    new Question('5-20-1', 'single', 3, 5),
+                    new Question('5-20-2', 'single', 2, 5),
                     new Question('5-21', 'single', 'A'),
                     new Question('5-22', 'single', 'A'),
                     new Question('5-23', 'single', 'A'),
                     new Question('5-24', 'single', 'A'),
-                    new Question('5-25', 'multiSelect', ['Y', 'N', 'N']),
-                    new Question('5-26', 'multiSelect', ['Private only', 'Private only']),
-                    new Question('5-27', 'multiSelect', ['Create gateway subnet as part of creating VPN gateway', 'Create virtual network gateway / VPN gateway', 'Create local gateway', 'Create VPN connection']),
+                    new Question('5-25-1', 'single', 'Y', 2),
+                    new Question('5-25-2', 'single', 'N', 2),
+                    new Question('5-25-3', 'single', 'N', 2),
+                    new Question('5-26-1', 'single', '3'),
+                    new Question('5-26-2', 'single', '3'),
+                    new Question('5-27', 'orderSelect', [3, 2, 1, 5], 6),
                     new Question('5-28', 'single', 'C'),
                     new Question('5-29', 'single', 'D'),
-                    new Question('5-30', 'multiSelect', ['A', 'C']),
-                    new Question('5-31', 'multiSelect', ['123', 'West']),
-                    new Question('5-32', 'multiSelect', ['23', '1']),
+                    new Question('5-30', 'multiSelect', ['A', 'C'], 5),
+                    new Question('5-31-1', 'single', 4),
+                    new Question('5-31-2', 'single', 1),
+                    new Question('5-32', 'single', 3, 3),
+                    new Question('5-32', 'single', 1, 3),
                     new Question('5-33', 'single', 'B'),
                     new Question('5-34', 'single', 'B'),
                     new Question('5-35', 'single', 'B'),
                     new Question('5-36', 'single', 'D'),
                     new Question('5-37', 'single', 'D'),
-                    new Question('5-38', 'multiSelect', ['N', 'Y', 'Y']),
+                    new Question('5-38-1', 'single', 'N', 2),
+                    new Question('5-38-2', 'single', 'Y', 2),
+                    new Question('5-38-3', 'single', 'Y', 2),
                     new Question('5-39', 'single', 'B'),
                     new Question('5-40', 'single', 'A'),
-                    new Question('5-41', 'multiSelect', ['A', 'B', 'C']),
-                    new Question('5-42', 'multiSelect', ['6 only', 'Delete peering1']),
-                    new Question('5-43', 'multiSelect', ['Y', 'Y', 'N']),
-                    new Question('5-44', 'multiSelect', ['Remove the public IP address from VM1', 'Create and configure an NSG']),
+                    new Question('5-41', 'multiSelect', ['A', 'B', 'C'], 5),
+                    new Question('5-42-1', 'single', 1),
+                    new Question('5-42-2', 'single', 3),
+                    new Question('5-43-1', 'single', 'Y', 2),
+                    new Question('5-43-2', 'single', 'Y', 2),
+                    new Question('5-43-3', 'single', 'N', 2),
+                    new Question('5-44-1', 'single', 2, 3),
+                    new Question('5-44-2', 'single', 1, 3),
                     new Question('5-45', 'single', 'B'),
                     new Question('5-46', 'single', 'B'),
-                    new Question('5-47', 'multiSelect', ['IP flow verify', 'Connection troubleshoot']),
-                    new Question('5-48', 'multiSelect', ['Y', 'N', 'Y']),
-                    new Question('5-49', 'multiSelect', ['IP1, VNET2, and Storage1', 'IP1, VNET2, and Storage1']),
-                    new Question('5-50', 'single', 'B'),
-                    new Question('5-51', 'single', 'B'),
-                    new Question('5-52', 'single', 'A'),
-                    new Question('5-53', 'single', 'A'),
+                    new Question('5-47-1', 'single', 1, 5),
+                    new Question('5-47-2', 'single', 1, 5),
+                    new Question('5-48-1', 'single', 'Y', 2),
+                    new Question('5-48-2', 'single', 'N', 2),
+                    new Question('5-48-3', 'single', 'Y', 2),
+                    new Question('5-49-1', 'single', 5, 5),
+                    new Question('5-49-2', 'single', 5, 5),
+                    new Question('5-50', 'single', 'B', 2),
+                    new Question('5-51', 'single', 'B', 2),
+                    new Question('5-52', 'single', 'A', 2),
+                    new Question('5-53', 'single', 'A', 2),
                     new Question('5-54', 'single', 'C'),
-                    new Question('5-55', 'single', 'B'),
-                    new Question('5-56', 'multiSelect', ['N', 'Y', 'Y']),
-                    new Question('5-57', 'single', 'B'),
-                    new Question('5-58', 'single', 'B'),
-                    new Question('5-59', 'single', 'B'),
-                    new Question('5-60', 'single', 'B'),
+                    new Question('5-55', 'single', 'B', 2),
+                    new Question('5-56-1', 'single', 'N', 2),
+                    new Question('5-56-2', 'single', 'Y', 2),
+                    new Question('5-56-3', 'single', 'Y', 2),
+                    new Question('5-57', 'single', 'B', 2),
+                    new Question('5-58', 'single', 'B', 2),
+                    new Question('5-59', 'single', 'B', 2),
+                    new Question('5-60', 'single', 'B', 2),
                     new Question('5-61', 'single', 'B'),
-                    new Question('5-62', 'single', 'A'),
-                    new Question('5-63', 'single', 'A'),
+                    new Question('5-62', 'single', 'A', 2),
+                    new Question('5-63', 'single', 'A', 2),
                     new Question('5-64', 'single', 'C'),
-                    new Question('5-65', 'multiSelect', ['Available', 'Connected']),
-                    new Question('5-66', 'single', '222'),
+                    new Question('5-65-1', 'single', 3),
+                    new Question('5-65-2', 'single', 1),
+                    new Question('5-66-1', 'single', 2),
+                    new Question('5-66-2', 'single', 2),
+                    new Question('5-66-3', 'single', 2),
                     new Question('5-67', 'single', 'D'),
-                    new Question('5-68', 'multiSelect', ['B', 'C']),
-                    new Question('5-69', 'multiSelect', ['C', 'E']),
-                    new Question('5-70', 'multiSelect', ['N', 'N', 'Y']),
+                    new Question('5-68', 'single', 'B', 2),
+                    new Question('5-69', 'multiSelect', ['C', 'E'], 6),
+                    new Question('5-70-1', 'single', 'N'),
+                    new Question('5-70-2', 'single', 'N'),
+                    new Question('5-70-3', 'single', 'Y'),
                     new Question('5-71', 'multiSelect', ['Y', 'Y', 'Y']),
                     new Question('5-72', 'multiSelect', ['Bastion', '26']),
                     new Question('5-73', 'single', 'A'),
@@ -879,8 +931,7 @@
                 return 'color:' + color + ';weight:bold;font-size:20px;';
             }
         },
-        watch: {
-        },
+        watch: {},
         computed: {},
     })
 </script>
