--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -474,7 +474,7 @@
                     new Question('4-33-2', 'single', 2),
                     new Question('4-34', 'single', 'B', 2),
                     new Question('4-35', 'single', 'B', 2),
-                    new Question('4-36', 'single', 'C'),
+                    new Question('4-36', 'single', 'C', 5),
                     new Question('4-37-1', 'single', 'N', 2),
                     new Question('4-37-2', 'single', 'Y', 2),
                     new Question('4-37-3', 'single', 'Y', 2),
@@ -512,7 +512,7 @@
                     new Question('4-62', 'single', 'B', 2),
                     new Question('4-63-1', 'single', 4, 5),
                     new Question('4-63-2', 'single', 2, 5),
-                    new Question('4-64', 'single', 'A'),
+                    new Question('4-64', 'single', 'A', 2),
                     new Question('4-65-1', 'single', 2),
                     new Question('4-65-2', 'single', 1),
                     new Question('4-66', 'single', 'A'),
@@ -585,12 +585,12 @@
                     new Question('5-6-1', 'single', 2, 3),
                     new Question('5-6-2', 'single', 2, 3),
                     new Question('5-7', 'single', 'C'),
-                    new Question('5-8', 'multiSelect', ['B', 'D', 'E'], 5),
+                    new Question('5-8', 'multiSelect', ['B', 'D', 'E'], 6),
                     new Question('5-9', 'single', 'A'),
                     new Question('5-10-1', 'single', 'Y', 2),
                     new Question('5-10-2', 'single', 'Y', 2),
                     new Question('5-10-3', 'single', 'N', 2),
-                    new Question('5-11', 'single', 'D'),
+                    new Question('5-11', 'single', 'D', 5),
                     new Question('5-12', 'orderSelect', [7, 2, 4], 7),
                     new Question('5-13-1', 'single', 'Y', 2),
                     new Question('5-13-2', 'single', 'Y', 2),
@@ -603,6 +603,9 @@
                     new Question('5-19', 'single', 'A', 2),
                     new Question('5-20-1', 'single', 3, 5),
                     new Question('5-20-2', 'single', 2, 5),
+
+                    // 351-400
+
                     new Question('5-21', 'single', 'A'),
                     new Question('5-22', 'single', 'A'),
                     new Question('5-23', 'single', 'A'),
@@ -620,16 +623,16 @@
                     new Question('5-31-2', 'single', 1),
                     new Question('5-32', 'single', 3, 3),
                     new Question('5-32', 'single', 1, 3),
-                    new Question('5-33', 'single', 'B'),
-                    new Question('5-34', 'single', 'B'),
-                    new Question('5-35', 'single', 'B'),
+                    new Question('5-33', 'single', 'B', 2),
+                    new Question('5-34', 'single', 'B', 2),
+                    new Question('5-35', 'single', 'B', 2),
                     new Question('5-36', 'single', 'D'),
                     new Question('5-37', 'single', 'D'),
                     new Question('5-38-1', 'single', 'N', 2),
                     new Question('5-38-2', 'single', 'Y', 2),
                     new Question('5-38-3', 'single', 'Y', 2),
                     new Question('5-39', 'single', 'B'),
-                    new Question('5-40', 'single', 'A'),
+                    new Question('5-40', 'single', 'A', 3),
                     new Question('5-41', 'multiSelect', ['A', 'B', 'C'], 5),
                     new Question('5-42-1', 'single', 1),
                     new Question('5-42-2', 'single', 3),
@@ -672,9 +675,12 @@
                     new Question('5-67', 'single', 'D'),
                     new Question('5-68', 'single', 'B', 2),
                     new Question('5-69', 'multiSelect', ['C', 'E'], 6),
-                    new Question('5-70-1', 'single', 'N'),
-                    new Question('5-70-2', 'single', 'N'),
-                    new Question('5-70-3', 'single', 'Y'),
+                    new Question('5-70-1', 'single', 'N', 2),
+                    new Question('5-70-2', 'single', 'N', 2),
+                    new Question('5-70-3', 'single', 'Y', 2),
+
+                    // 401-450
+
                     new Question('5-71-1', 'single', 'Y', 2),
                     new Question('5-71-2', 'single', 'Y', 2),
                     new Question('5-71-3', 'single', 'Y', 2),
@@ -707,8 +713,8 @@
                     new Question('5-90-1', 'single', 'N', 2),
                     new Question('5-90-2', 'single', 'Y', 2),
                     new Question('5-90-3', 'single', 'Y', 2),
-                    new Question('5-91', 'multiSelect', ['D', 'E']),
-                    new Question('5-92', 'single', 'B'),
+                    new Question('5-91', 'multiSelect', ['D', 'E'], 5),
+                    new Question('5-92', 'single', 'B', 3),
                     new Question('5-93-1', 'single', 'Y', 2),
                     new Question('5-93-2', 'single', 'N', 2),
                     new Question('5-93-3', 'single', 'Y', 2),
@@ -742,11 +748,10 @@
                     new Question('5-112', 'single', 'C'),
                     new Question('5-113', 'single', 'A'),
                     new Question('5-114', 'single', 'C'),
-                    new Question('5-115', 'single', 'A'),
+                    new Question('5-115', 'single', 'A', 5),
                     new Question('5-116', 'single', 'C'),
                     new Question('5-117', 'single', 'C'),
                     new Question('5-118', 'single', 'D'),
-                    new Question('5-119', 'single', 'D'),
                     new Question('5-120', 'orderSelect', [6, 4, 1], 6),
 
                     // 451-500
@@ -754,7 +759,7 @@
                     new Question('5-122', 'single', 'A'),
                     new Question('5-125', 'single', 'D'),
                     new Question('5-131', 'single', 'C'),
-                    new Question('5-132', 'single', 'A'),
+                    new Question('5-132', 'single', 'B'),
                     new Question('5-135-1', 'single', 3, 7),
                     new Question('5-135-2', 'single', 2, 5),
                     new Question('5-136', 'single', 'A'),
@@ -781,8 +786,8 @@
                     new Question('6-5', 'single', 'D'),
                     new Question('6-6-1', 'single', 2),
                     new Question('6-6-2', 'single', 2),
-                    new Question('6-7-1', 'single', 1),
-                    new Question('6-7-2', 'single', 1),
+                    new Question('6-7-1', 'single', 4),
+                    new Question('6-7-2', 'single', 4),
                     new Question('6-8', 'single', 'D'),
                     new Question('6-9-1', 'single', 'N', 2),
                     new Question('6-9-2', 'single', 'N', 2),
@@ -794,7 +799,7 @@
                     new Question('6-12-1', 'single', 'N', 2),
                     new Question('6-12-2', 'single', 'N', 2),
                     new Question('6-12-3', 'single', 'Y', 2),
-                    new Question('6-13', 'single', 'A'),
+                    new Question('6-13', 'single', 'A', 2),
                     new Question('6-14', 'single', 'C'),
                     new Question('6-15-1', 'single', 2),
                     new Question('6-15-2', 'single', 1, 3),
@@ -813,8 +818,8 @@
 
                     new Question('6-24-1', 'single', 'A'),
                     new Question('6-24-2', 'single', 'B'),
-                    new Question('6-25', 'single', 3),
-                    new Question('6-25', 'single', 1),
+                    new Question('6-25-1', 'single', 3, 5),
+                    new Question('6-25-2', 'single', 1, 5),
                     new Question('6-26-1', 'single', 'N', 2),
                     new Question('6-26-2', 'single', 'Y', 2),
                     new Question('6-26-3', 'single', 'Y', 2),
@@ -844,7 +849,7 @@
                     new Question('6-43', 'single', 'A'),
                     new Question('6-44', 'single', 'C'),
                     new Question('6-45', 'single', 'A'),
-                    new Question('6-46', 'multiSelect', ['BD'], 5),
+                    new Question('6-46', 'multiSelect', ['B', 'D'], 5),
                     new Question('6-47', 'single', 'A'),
                     new Question('6-48-1', 'single', 'A'),
                     new Question('6-48-2', 'single', 'D'),
@@ -858,7 +863,7 @@
                     new Question('6-52-2', 'single', 2),
                     new Question('6-53', 'single', 'D'),
                     new Question('6-54', 'single', 'A'),
-                    new Question('6-55', 'single', 'B'),
+                    new Question('6-55', 'single', 'B', 3),
                     new Question('6-56', 'single', 'D'),
                     new Question('6-57', 'single', 'B'),
                     new Question('6-58', 'single', 'A'),
