--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -172,7 +172,7 @@
                     new Question('2-23-2', 'single', 'Y', 2),
                     new Question('2-23-3', 'single', 'N', 2),
                     new Question('2-24', 'single', 'A'),
-                    new Question('2-25-1', 'single', 'A', 2),
+                    new Question('2-25-1', 'single', 'B', 3),
                     new Question('2-25-2', 'single', 'A', 3),
                     new Question('2-26', 'multiSelect', ['A', 'E'], 5),
                     new Question('2-27', 'single', 'B'),
@@ -301,7 +301,7 @@
                     new Question('3-9-1', 'single', 'N', 2),
                     new Question('3-9-2', 'single', 'Y', 2),
                     new Question('3-9-3', 'single', 'Y', 2),
-                    new Question('3-10', 'multiSelect', [7, 5, 6], 8),
+                    new Question('3-10', 'multiSelect', [2, 7, 6], 8),
                     new Question('3-11-1', 'single', 1, 3),
                     new Question('3-11-2', 'single', 1, 6),
 
@@ -389,7 +389,7 @@
                     new Question('3-62-1', 'single', 5, 5),
                     new Question('3-62-2', 'single', 2, 5),
                     new Question('3-63', 'single', 'C'),
-                    new Question('3-64-1', 'single', 'B', 3),
+                    new Question('3-64-1', 'single', 'C', 3),
                     new Question('3-64-2', 'single', 'B', 3),
                     new Question('3-65 (duplicate)', 'single', 'B'),
                     new Question('3-66', 'single', 'A'),
@@ -404,7 +404,7 @@
                     new Question('3-72-1', 'single', 3, 3),
                     new Question('3-72-2', 'single', 3),
                     new Question('3-73', 'single', 'A'),
-                    new Question('3-74', 'single', 'B'),
+                    new Question('3-74', 'single', 'B', 6),
                     new Question('3-75-1', 'single', 1, 3),
                     new Question('3-75-2', 'single', 2, 3),
                     new Question('3-76', 'single', 'C'),
@@ -591,7 +591,7 @@
                     new Question('5-10-2', 'single', 'Y', 2),
                     new Question('5-10-3', 'single', 'N', 2),
                     new Question('5-11', 'single', 'D', 5),
-                    new Question('5-12', 'orderSelect', [7, 2, 4], 7),
+                    new Question('5-12', 'orderSelect', [7, 2, 5], 7),
                     new Question('5-13-1', 'single', 'Y', 2),
                     new Question('5-13-2', 'single', 'Y', 2),
                     new Question('5-13-3', 'single', 'N', 2),
@@ -897,8 +897,8 @@
                     new Question('14-1-2', 'single', 3, 3),
                     new Question('14-2', 'single', 'A'),
                     new Question('15-1-1', 'single', 'Y', 2),
-                    new Question('15-1-1', 'single', 'Y', 2),
-                    new Question('15-1-2', 'single', 'N', 2),
+                    new Question('15-1-2', 'single', 'Y', 2),
+                    new Question('15-1-3', 'single', 'N', 2),
                     new Question('15-3', 'single', 'C'),
                     new Question('15-4', 'single', 'D'),
                     new Question('16-1-1', 'single', 'C'),
